# AutoResearchAgent

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  main.py  pyproject.toml
agent/: graph.py
agent/nodes/: __init__.py  extract.py  gap_analysis.py  planning.py  report.py  search.py
agent/prompts/: templates.py
agent/tools/: __init__.py  tier1_search.py
api/: routes.py  sse.py
backend/: main.py  pyproject.toml
backend/agent/: graph.py  llm.py  progress.py  state.py
backend/agent/nodes/: extract.py  gap_analysis.py  planning.py  report.py  search.py
backend/agent/prompts/: templates.py
backend/agent/tools/: __init__.py  search_tools.py  tavily_search.py  tier1_search.py
backend/api/: models.py  routes.py  sse.py
backend/storage/: file_store.py
doc/: finish.md  todo.md
docs/: finish.md  plan.md  todo.md
frontend/: app.js  index.html  styles.css
storage/: file_store.py
